resolv-bug-gap

--- a/src/components/marketing-components/countries/style.css
+++ b/src/components/marketing-components/countries/style.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -12,6 +11,7 @@ body {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -35,123 +35,133 @@ header h1 {
     font-family: 'Pacifico', cursive;
     font-size: 36px;
     margin-bottom: 20px;
-    
-    
-}
-
-.static-country-list {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-}
-
-.static-country-list li {
-    display: inline-block;
-    margin: 10px 15px; /* Add space between each country box */
-}
-
-.static-country-list a {
-    background-color: rgba(130, 72, 202, 0.8);
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
-    
-}
-
-.static-country-list a:hover {
-    background-color: rgba(240, 128, 184, 0.5);
-}
 
 
-.menu-icon {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    cursor: pointer;
 }
 
-.menu-icon div {
-    width: 35px;
-    height: 4px;
-    background-color: white;
-    margin: 6px 0;
+.country-list-page {
+    font-size: 36px;
 }
 
-.dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 60px;
-    left: 20px;
-    background-color: rgba(130, 72, 202, 0.9);
-    border-radius: 5px;
-    padding: 10px;
-    max-height: 400px;
-    overflow-y: auto;
-    transition: opacity 0.5s ease, max-height 0.5s ease;
-    opacity: 0;
-}
+    .static-country-list {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+    }
 
-.dropdown-menu.active {
-    display: block;
-    opacity: 1;
-}
+    .static-country-list li {
+        display: inline-block;
+        margin: 10px 15px;
+        
+    }
 
-.dropdown-menu a {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-}
+    .static-country-list a {
+        background-color: rgba(130, 72, 202, 0.8);
+        color: white;
+        text-decoration: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 18px;
+        transition: background-color 0.3s ease;
 
-.dropdown-menu a:hover {
-    background-color: rgba(240, 128, 184, 0.5);
-}
+    }
 
-.dropdown-menu .arrow {
-    cursor: pointer;
-    transition: transform 0.3s ease;
-}
+    .static-country-list a:hover {
+        background-color: rgba(240, 128, 184, 0.5);
+    }
 
-.arrow.rotated {
-    transform: rotate(180deg);
-}
 
-.country-list {
-    display: none;
-    padding-left: 20px;
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height 1.5s ease;
-}
+    .menu-icon {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        cursor: pointer;
+    }
 
-.country-list.active {
-    display: block;
-    max-height: 500px;
-}
+    .menu-icon div {
+        width: 35px;
+        height: 4px;
+        background-color: white;
+        margin: 6px 0;
+    }
 
-.country-list a {
-    font-size: 14px;
-}
+    .dropdown-menu {
+        display: none;
+        position: absolute;
+        top: 60px;
+        left: 20px;
+        background-color: rgba(130, 72, 202, 0.9);
+        border-radius: 5px;
+        padding: 10px;
+        max-height: 400px;
+        overflow-y: auto;
+        transition: opacity 0.5s ease, max-height 0.5s ease;
+        opacity: 0;
+    }
 
-.menu-icon.active + .dropdown-menu {
-    display: block;
-}
+    .dropdown-menu.active {
+        display: block;
+        opacity: 1;
+    }
 
-.country-list.active {
-    display: block;
-}
+    .dropdown-menu a {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        text-decoration: none;
+        color: white;
+        font-size: 16px;
+    }
 
-.dropdown-menu::-webkit-scrollbar {
-    width: 8px;
-}
+    .dropdown-menu a:hover {
+        background-color: rgba(240, 128, 184, 0.5);
+    }
 
-.dropdown-menu::-webkit-scrollbar-thumb {
-    background-color: rgba(130, 72, 202, 0.8);
-    border-radius: 5px;
-}
+    .dropdown-menu .arrow {
+        cursor: pointer;
+        transition: transform 0.3s ease;
+    }
+
+    .arrow.rotated {
+        transform: rotate(180deg);
+    }
+
+    .country-list {
+        display: none;
+        padding-left: 20px;
+        overflow: hidden;
+        max-height: 0;
+        transition: max-height 1.5s ease;
+    }
+
+    .country-list.active {
+        display: block;
+        max-height: 500px;
+    }
+
+    .country-list a {
+        font-size: 14px;
+    }
+
+    .menu-icon.active+.dropdown-menu {
+        display: block;
+    }
+
+    .country-list.active {
+        display: block;
+    }
+
+    .dropdown-menu::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    .dropdown-menu::-webkit-scrollbar-thumb {
+        background-color: rgba(130, 72, 202, 0.8);
+        border-radius: 5px;
+    }
+
+    .staticlist {
+        display: flex;
+        gap: 500px;
+    }
